--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         class="px-6 py-8 m-2 border border-gray-200 rounded-lg bg-gray-50"
       >
         <h2 class="text-xl font-bold text-gray-800 mb-4 text-center">
-          🔥 Top Govt Jobs 2025 YOYO
+          🔥 Top Govt Jobs 2025 
         </h2>
 
         <div class="grid md:grid-cols-4 gap-6">
