--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#dc2626" />
+
     <title>Tripura Sarkari | Latest Govt Jobs in Tripura 2025</title>
 
     <!-- Google tag (gtag.js) -->
@@ -20,56 +22,58 @@
       gtag("config", "G-ZBQZF67YQ4");
     </script>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/icon/favicon.ico" />
 
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="icon/favicon-16x16.png"
+      href="/icon/favicon-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="icon/favicon-32x32.png"
+      href="/icon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="48x48"
-      href="icon/favicon-48x48.png"
+      href="/icon/favicon-48x48.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="64x64"
-      href="icon/favicon-64x64.png"
+      href="/icon/favicon-64x64.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="128x128"
-      href="icon/favicon-128x128.png"
+      href="/icon/favicon-128x128.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="256x256"
-      href="icon/favicon-256x256.png"
+      href="/icon/favicon-256x256.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="icon/favicon-512x512.png"
+      href="/icon/favicon-512x512.png"
     />
 
+    <!-- Apple Touch Icon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="icon/favicon-256x256.png"
+      href="/icon/favicon-256x256.png"
     />
+
     <meta
       property="og:image"
       content="https://tripurasarkari.com/icon/favicon-512x512.png"
@@ -206,7 +210,7 @@
         class="px-6 py-8 m-2 border border-gray-200 rounded-lg bg-gray-50"
       >
         <h2 class="text-xl font-bold text-gray-800 mb-4 text-center">
-          🔥 Top Govt Jobs 2025 
+          🔥 Top Govt Jobs 2025
         </h2>
 
         <div class="grid md:grid-cols-4 gap-6">
