--- a/index.html
+++ b/index.html
@@ -21,58 +21,10 @@
 
       gtag("config", "G-ZBQZF67YQ4");
     </script>
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/icon/favicon.ico" />
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/icon/favicon-16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/icon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="/icon/favicon-48x48.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="64x64"
-      href="/icon/favicon-64x64.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="128x128"
-      href="/icon/favicon-128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="256x256"
-      href="/icon/favicon-256x256.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="/icon/favicon-512x512.png"
-    />
-
-    <!-- Apple Touch Icon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/icon/favicon-256x256.png"
-    />
+    <!-- Favicon (FINAL FIX) -->
+    <link rel="icon" href="/icon/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/icon/favicon-256x256.png" />
 
     <meta
       property="og:image"
