--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="icon" href="/icon/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/icon/favicon-256x256.png" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <meta
       property="og:image"
