--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#dc2626" />
 
     <title>Tripura Sarkari | Latest Govt Jobs in Tripura 2025</title>
+    <link rel="icon" href="/favicon.ico">
+
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -21,13 +23,7 @@
 
       gtag("config", "G-ZBQZF67YQ4");
     </script>
-    <!-- Favicon (FINAL FIX) -->
-    <link rel="icon" href="/icon/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/icon/favicon-256x256.png" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-
+   
     <meta
       property="og:image"
       content="https://tripurasarkari.com/icon/favicon-512x512.png"
