--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us | Tripura Sarkari</title>
-   <!-- Google tag (gtag.js) -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us | Tripura Sarkari</title>
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-ZBQZF67YQ4"
@@ -19,49 +19,65 @@
       gtag("config", "G-ZBQZF67YQ4");
     </script>
     <!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="../icon/favicon.ico">
+    <link rel="icon" href="/favicon.ico" />
 
-<link rel="icon" type="image/png" sizes="16x16" href="../icon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../icon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="48x48" href="../icon/favicon-48x48.png">
-<link rel="icon" type="image/png" sizes="64x64" href="../icon/favicon-64x64.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
-<link rel="apple-touch-icon" sizes="180x180" href="../icon/favicon-256x256.png">
-<!--Favicon-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <meta
+      name="description"
+      content="About TripuraSarkari.com - Our mission is to provide latest Tripura and Central Govt job updates quickly and accurately."
+    />
+  </head>
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <meta name="description" content="About TripuraSarkari.com - Our mission is to provide latest Tripura and Central Govt job updates quickly and accurately.">
-</head>
+  <body class="bg-gray-100 text-gray-800 font-sans">
+    <div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg my-6 p-6">
+      <h1 class="text-3xl font-bold text-red-700 mb-4 text-center">
+        About TripuraSarkari.com
+      </h1>
+      <p class="text-gray-700 mb-4">
+        Welcome to <strong>TripuraSarkari.com</strong> — your trusted
+        destination for all the latest
+        <strong
+          >Government Job Updates, Results, Admit Cards, and Answer Keys</strong
+        >
+        in Tripura and across India.
+      </p>
 
-<body class="bg-gray-100 text-gray-800 font-sans">
-  <div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg my-6 p-6">
-    <h1 class="text-3xl font-bold text-red-700 mb-4 text-center">About TripuraSarkari.com</h1>
-    <p class="text-gray-700 mb-4">
-      Welcome to <strong>TripuraSarkari.com</strong> — your trusted destination for all the latest <strong>Government Job Updates, Results, Admit Cards, and Answer Keys</strong> in Tripura and across India.
-    </p>
+      <p class="text-gray-700 mb-4">
+        Our goal is simple: to make it easier for job seekers from Tripura to
+        get <strong>accurate, timely, and verified job updates</strong> without
+        confusion. We collect official notifications from verified sources like
+        TPSC, TRBT, SSC, UPSC, and other Government websites.
+      </p>
 
-    <p class="text-gray-700 mb-4">
-      Our goal is simple: to make it easier for job seekers from Tripura to get <strong>accurate, timely, and verified job updates</strong> without confusion. We collect official notifications from verified sources like TPSC, TRBT, SSC, UPSC, and other Government websites.
-    </p>
+      <p class="text-gray-700 mb-4">
+        Whether you are a student, graduate, or working professional,
+        <strong>TripuraSarkari.com</strong> ensures you never miss any important
+        update related to Tripura Government or Central Government exams.
+      </p>
 
-    <p class="text-gray-700 mb-4">
-      Whether you are a student, graduate, or working professional, <strong>TripuraSarkari.com</strong> ensures you never miss any important update related to Tripura Government or Central Government exams.
-    </p>
+      <h2 class="text-xl font-semibold text-red-700 mt-6 mb-2">Our Mission</h2>
+      <ul class="list-disc list-inside text-gray-700">
+        <li>Provide free and fast access to verified job notifications.</li>
+        <li>
+          Promote transparency and awareness about Government recruitments.
+        </li>
+        <li>Empower Tripura’s youth with reliable career information.</li>
+      </ul>
 
-    <h2 class="text-xl font-semibold text-red-700 mt-6 mb-2">Our Mission</h2>
-    <ul class="list-disc list-inside text-gray-700">
-      <li>Provide free and fast access to verified job notifications.</li>
-      <li>Promote transparency and awareness about Government recruitments.</li>
-      <li>Empower Tripura’s youth with reliable career information.</li>
-    </ul>
+      <p class="mt-6 text-center text-sm text-gray-600">
+        <a href="../index.html" class="text-red-600 hover:underline"
+          >← Back to Home</a
+        >
+      </p>
+    </div>
 
-    <p class="mt-6 text-center text-sm text-gray-600">
-      <a href="../index.html" class="text-red-600 hover:underline">← Back to Home</a>
-    </p>
-  </div>
-
-  <footer class="bg-gray-800 text-white text-center text-sm py-4">
-    © 2025 TripuraSarkari.com | All Rights Reserved
-  </footer>
-</body>
+    <footer class="bg-gray-800 text-white text-center text-sm py-4">
+      © 2025 TripuraSarkari.com | All Rights Reserved
+    </footer>
+  </body>
 </html>
