--- a/CentralJobs/ib-mts-notice-2025.html
+++ b/CentralJobs/ib-mts-notice-2025.html
@@ -6,6 +6,12 @@
     <title>
       IB MTS Recruitment 2025 | Intelligence Bureau Multi Tasking Staff
     </title>
+    <link rel="icon" href="/favicon.ico" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
      <!-- Google tag (gtag.js) -->
     <script
       async
@@ -21,61 +27,8 @@
       gtag("config", "G-ZBQZF67YQ4");
     </script>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="icon/favicon.ico" />
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="icon/favicon-16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="icon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="icon/favicon-48x48.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="64x64"
-      href="icon/favicon-64x64.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="128x128"
-      href="icon/favicon-128x128.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="256x256"
-      href="icon/favicon-256x256.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="icon/favicon-512x512.png"
-    />
-
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="icon/favicon-256x256.png"
-    />
-    <meta
-      property="og:image"
-      content="https://tripurasarkari.com/icon/favicon-512x512.png"
-    />
+   
+  
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
