--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact Us | Tripura Job Portal</title>
-   <!-- Google tag (gtag.js) -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us | Tripura Job Portal</title>
+    <link rel="icon" href="/favicon.ico" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-ZBQZF67YQ4"
@@ -19,42 +25,65 @@
       gtag("config", "G-ZBQZF67YQ4");
     </script>
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <meta name="description" content="Contact TripuraSarkari.com - Reach out to us for feedback, updates, or job-related queries.">
-</head>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <meta
+      name="description"
+      content="Contact TripuraSarkari.com - Reach out to us for feedback, updates, or job-related queries."
+    />
+  </head>
 
-<body class="bg-gray-100 text-gray-800 font-sans">
-  <div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg my-6 p-6">
-    <h1 class="text-3xl font-bold text-red-700 mb-4 text-center">Contact Us</h1>
+  <body class="bg-gray-100 text-gray-800 font-sans">
+    <div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg my-6 p-6">
+      <h1 class="text-3xl font-bold text-red-700 mb-4 text-center">
+        Contact Us
+      </h1>
 
-    <p class="text-gray-700 mb-4 text-center">
-      Have a question, suggestion, or update to share? We’d love to hear from you.
-    </p>
+      <p class="text-gray-700 mb-4 text-center">
+        Have a question, suggestion, or update to share? We’d love to hear from
+        you.
+      </p>
 
-    <section id="contact-info" class="contact-section">
-  <div class="container">
-    <h2>Contact Information</h2>
-    <p>For general inquiries, support, or feedback, please contact us at:</p>
-    
-    <ul class="contact-details">
-      <li><strong>Email ID:</strong> <a href="mailto:tripurajobportal@gmail.com">tripurajobp@gmail.com</a></li>
-      <li><strong>Phone:</strong> Coming Soon</li>
-    </ul>
+      <section id="contact-info" class="contact-section">
+        <div class="container">
+          <h2>Contact Information</h2>
+          <p>
+            For general inquiries, support, or feedback, please contact us at:
+          </p>
 
-    <p>You can also reach out to us for job updates, corrections, or content contributions.</p>
-  </div>
-</section>
-    <p class="text-sm text-gray-600 text-center mt-6">
-      You can also email us directly at <a href="mailto:tripurajobp@gmail.com" class="text-blue-600 hover:underline">tripurajobp@gmail.com</a>
-    </p>
+          <ul class="contact-details">
+            <li>
+              <strong>Email ID:</strong>
+              <a href="mailto:tripurajobportal@gmail.com"
+                >tripurajobp@gmail.com</a
+              >
+            </li>
+            <li><strong>Phone:</strong> Coming Soon</li>
+          </ul>
 
-    <p class="mt-6 text-center text-sm text-gray-600">
-      <a href="../index.html" class="text-red-600 hover:underline">← Back to Home</a>
-    </p>
-  </div>
+          <p>
+            You can also reach out to us for job updates, corrections, or
+            content contributions.
+          </p>
+        </div>
+      </section>
+      <p class="text-sm text-gray-600 text-center mt-6">
+        You can also email us directly at
+        <a
+          href="mailto:tripurajobp@gmail.com"
+          class="text-blue-600 hover:underline"
+          >tripurajobp@gmail.com</a
+        >
+      </p>
 
-  <footer class="bg-gray-800 text-white text-center text-sm py-4">
-    © 2025 TripuraSarkari.com | All Rights Reserved
-  </footer>
-</body>
+      <p class="mt-6 text-center text-sm text-gray-600">
+        <a href="../index.html" class="text-red-600 hover:underline"
+          >← Back to Home</a
+        >
+      </p>
+    </div>
+
+    <footer class="bg-gray-800 text-white text-center text-sm py-4">
+      © 2025 TripuraSarkari.com | All Rights Reserved
+    </footer>
+  </body>
 </html>
