--- a/pages/tripura-jobs.html
+++ b/pages/tripura-jobs.html
@@ -1,107 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TripuraSarkari.com | Tripura Govt Jobs</title>
-    <link rel="icon" href="/favicon.ico" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-ZBQZF67YQ4"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-ZBQZF67YQ4");
-    </script>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      .site-container {
-        max-width: 1100px;
-        margin: 0 auto;
-        background-color: white;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-      }
-    </style>
+  <head id="site-head">
+    <!-- Page-specific SEO -->
+    <title>Tripura Govt Jobs 2025 – Latest TPSC & TRBT Vacancies</title>
+    <meta
+      name="description"
+      content="Get latest Tripura Govt Jobs 2025 including TPSC, TRBT, Police, Education, Health & Department-wise vacancies."
+    />
+    <link rel="canonical" href="https://tripurasarkari.com/pages/tripura-jobs.html">
   </head>
+
   <body class="bg-gray-100 text-gray-800 font-sans">
-    <div class="site-container">
-      <!-- Header -->
-      <header
-        class="bg-red-700 text-white text-center py-4 shadow-md rounded-t-lg"
-      >
-        <h1 class="text-3xl font-bold">
-          Tripura<span class="text-yellow-300">Sarkari</span>.com
-        </h1>
-        <p class="text-sm mt-1">Latest Tripura Government Job Updates 2025</p>
-      </header>
+    <div class="site-container max-w-[1100px] mx-auto bg-white shadow">
 
-      <!-- Navbar -->
-      <nav
-        class="bg-white shadow flex flex-wrap justify-center gap-4 py-3 text-sm font-medium border-b"
-      >
-        <a href="../index.html" class="text-red-700 hover:text-red-500"
-          >🏠 Home</a
-        >
-        <a href="tripura-jobs.html" class="text-gray-700 hover:text-red-600"
-          >Tripura Jobs</a
-        >
-        <a href="central-jobs.html" class="text-gray-700 hover:text-red-600"
-          >Central Jobs</a
-        >
-        <a href="results.html" class="text-gray-700 hover:text-red-600"
-          >Results</a
-        >
-        <a href="admit.html" class="text-gray-700 hover:text-red-600"
-          >Admit Cards</a
-        >
-        <a href="answerkey.html" class="text-gray-700 hover:text-red-600"
-          >Answer Keys</a
-        >
-        <a href="notices.html" class="text-gray-700 hover:text-red-600"
-          >Notices</a
-        >
-        <a href="about.html" class="text-gray-700 hover:text-red-600">About</a>
-        <a href="contact.html" class="text-gray-700 hover:text-red-600"
-          >Contact</a
-        >
-      </nav>
+      <!-- ✅ Shared Header + Navbar -->
+      <div id="site-header"></div>
 
-      <!-- Hero Section -->
+      <!-- ✅ HERO (MAIN H1 FOR THIS PAGE) -->
       <section
         class="text-center py-6 bg-gradient-to-r from-red-600 to-red-800 text-white"
       >
-        <h2 class="text-2xl font-bold mb-2">📍 Tripura Government Jobs 2025</h2>
+        <h1 class="text-2xl md:text-3xl font-bold mb-2">
+          Tripura Government Jobs 2025
+        </h1>
         <p class="text-sm opacity-90">
-          All latest Tripura Govt Job notifications in one place
+          All latest Tripura Govt job notifications in one place
         </p>
       </section>
 
-      <!-- Job List -->
+      <!-- ✅ JOB LIST -->
       <main class="px-6 py-8">
         <div class="bg-white rounded-lg shadow-md p-4">
           <ul class="divide-y divide-gray-200 text-sm">
-            <!--December 2025-->
+
             <li class="py-3 hover:bg-gray-50 transition">
               <a
                 href="../TripuraJobs/TPSC-Project-Officer-Recruitment-2025.html"
-                target="_blank"
                 class="flex justify-between items-center text-blue-600 hover:underline"
               >
                 <span>
-                  Project Officer (Group-A, Gazetted) – Directorate of
-                  Biotechnology, TPSC
+                  Project Officer (Group-A, Gazetted) – Directorate of Biotechnology, TPSC
                 </span>
                 <span class="text-xs text-gray-500">05 Dec 2025</span>
               </a>
@@ -110,38 +48,37 @@
             <li class="py-3 hover:bg-gray-50 transition">
               <a
                 href="../TripuraJobs/TPSC-Assistant-Controller-of-Examinations-Deputation-2025.html"
-                target="_blank"
                 class="flex justify-between items-center text-blue-600 hover:underline"
               >
                 <span>
-                  Assistant Controller of Examinations (Deputation), Group-B,
-                  Gazetted – TPSC
+                  Assistant Controller of Examinations (Deputation), Group-B, Gazetted – TPSC
                 </span>
                 <span class="text-xs text-gray-500">06 Dec 2025</span>
               </a>
             </li>
+
             <li class="py-3 hover:bg-gray-50 transition">
               <a
                 href="../TripuraJobs/TPSC-Inspector-of-Factories-Recruitment-2025.html"
                 class="flex justify-between items-center text-blue-600 hover:underline"
               >
-                <span
-                  >TPSC Inspector of Factories Recruitment 2025 (Advt.
-                  No-27/2025)</span
-                >
+                <span>
+                  Inspector of Factories – TPSC (Advt. No-27/2025)
+                </span>
                 <span class="text-xs text-gray-500">05 Nov 2025</span>
               </a>
             </li>
+
           </ul>
         </div>
       </main>
 
-      <!-- Footer -->
-      <footer
-        class="bg-gray-800 text-white text-center text-sm py-4 rounded-b-lg"
-      >
-        © 2025 TripuraSarkari.com | Designed with ❤️
-      </footer>
+      <!-- ✅ Shared Footer -->
+      <div id="site-footer"></div>
+
     </div>
+
+    <!-- ✅ Shared Loader -->
+    <script src="/js/include.js"></script>
   </body>
 </html>
