--- a/pages/tripura-jobs.html
+++ b/pages/tripura-jobs.html
@@ -4,13 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TripuraSarkari.com | Tripura Govt Jobs</title>
-    <link rel="icon" href="/favicon.ico" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <!-- Google tag (gtag.js) -->
+    
+     <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-ZBQZF67YQ4"
@@ -24,6 +19,40 @@
 
       gtag("config", "G-ZBQZF67YQ4");
     </script>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../icon/favicon.ico" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../icon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="../icon/favicon-48x48.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="../icon/favicon-64x64.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../icon/favicon-256x256.png"
+    />
+    <!--Favicon-->
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -132,6 +161,8 @@
                 <span class="text-xs text-gray-500">05 Nov 2025</span>
               </a>
             </li>
+
+           
           </ul>
         </div>
       </main>
