--- a/index.html
+++ b/index.html
@@ -190,7 +190,36 @@
           🔥 Top Govt Jobs 2025
         </h2>
 
+       
+
         <div class="grid md:grid-cols-4 gap-6">
+          <!-- ⚓ Indian Navy NOTICE -->
+          <div
+            class="section-card border-blue-700 p-5 hover:shadow-lg transition rounded-lg bg-blue-50"
+          >
+            <h3 class="font-semibold text-blue-800 mb-1">
+              📢 Indian Navy 10+2 (B.Tech) Cadet Entry 2026
+            </h3>
+
+            <p class="text-sm text-gray-700 mb-2">
+              Indian Navy has released the notification for
+              <strong
+                >10+2 B.Tech Cadet Entry Scheme (Permanent Commission)</strong
+              >.
+            </p>
+
+            <p class="text-sm text-gray-600 mb-2">
+              🗓️ Last Date to Apply:
+              <strong class="text-blue-700">19 January 2026</strong>
+            </p>
+
+            <a
+              href="CentralJobs/indian-navy-10-2-btech-cadet-entry-2026.html"
+              class="text-blue-600 font-semibold hover:underline"
+            >
+              Read Full Notice →
+            </a>
+          </div>
           <!-- 🔥 SSC GD -->
           <div
             class="section-card border-red-600 p-5 hover:shadow-lg transition rounded-lg"
@@ -390,6 +419,20 @@
 
           <ul class="divide-y text-sm">
             <!-- NEWEST FIRST -->
+            <!--January 2026-->
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="CentralJobs/indian-navy-10-2-btech-cadet-entry-2026.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline"
+              >
+                <span>
+                  Indian Navy 10+2 (B.Tech) Cadet Entry 2026 – Permanent
+                  Commission (44 Posts)
+                </span>
+                <span class="text-xs text-gray-500">19 Jan 2026</span>
+              </a>
+            </li>
 
             <!--December 2025-->
 
