--- a/pages/central-jobs.html
+++ b/pages/central-jobs.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-     <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-ZBQZF67YQ4"
@@ -24,8 +24,6 @@
 
       gtag("config", "G-ZBQZF67YQ4");
     </script>
-    
-    
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -90,6 +88,21 @@
       <main class="px-6 py-8">
         <div class="bg-white rounded-lg shadow-md p-4">
           <ul class="divide-y divide-gray-200 text-sm">
+            <!--January 2026-->
+
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="../CentralJobs/indian-navy-10-2-btech-cadet-entry-2026.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline"
+              >
+                <span>
+                  Indian Navy 10+2 (B.Tech) Cadet Entry 2026 – Permanent
+                  Commission (44 Posts) 19 Jan 2026
+                </span>
+                <span class="text-xs text-gray-500">19 Jan 2026</span>
+              </a>
+            </li>
             <!-- December 2025 -->
 
             <li class="py-3 hover:bg-gray-50 transition">
