--- a/index.html
+++ b/index.html
@@ -190,8 +190,6 @@
           🔥 Top Govt Jobs 2025
         </h2>
 
-       
-
         <div class="grid md:grid-cols-4 gap-6">
           <!-- ⚓ Indian Navy NOTICE -->
           <div
@@ -222,19 +220,26 @@
           </div>
           <!-- 🔥 SSC GD -->
           <div
-            class="section-card border-red-600 p-5 hover:shadow-lg transition rounded-lg"
+            class="section-card border-red-600 p-5 hover:shadow-lg transition rounded-lg bg-white"
           >
-            <h3 class="font-semibold text-red-700 mb-1">
-              SSC GD Constable Recruitment 2025
+            <h3 class="font-semibold text-red-700 mb-1 flex items-center gap-2">
+              <span
+                class="animate-pulse bg-red-600 text-white text-xs px-2 py-0.5 rounded"
+              >
+                LIVE
+              </span>
+              SSC GD Constable Final Result 2026
             </h3>
+
             <p class="text-sm text-gray-600 mb-2">
-              25,000+ Posts | Last Date: 31 Dec 2025
+              CAPFs, SSF & Assam Rifles | Merit List, Cut Off & Result PDFs
             </p>
+
             <a
-              href="CentralJobs/SSC-GD-Constable-Recruitment-2026.html"
+              href="Results/ssc-gd-constable-result-2026.html"
               class="text-blue-600 font-semibold hover:underline"
             >
-              View Details →
+              Check Result →
             </a>
           </div>
 
@@ -697,6 +702,19 @@
             📊 Latest Results
           </h3>
           <ul class="space-y-2 text-sm">
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="Results/ssc-gd-constable-result-2026.html"
+                target="_blank"
+                class="flex justify-between items-center text-red-600 hover:underline"
+              >
+                <span>
+                  📢 SSC GD Constable Result 2026 – Merit List & Cut Off
+                </span>
+                <span class="text-xs text-gray-500">OUT</span>
+              </a>
+            </li>
+
             <li>
               <a
                 href="https://tpsc.tripura.gov.in/sites/default/files/Cutoff_TCS_TPS_04_16_151225.pdf"
