--- a/pages/results.html
+++ b/pages/results.html
@@ -104,7 +104,7 @@
         <!-- Latest Results -->
         <div class="bg-white rounded-lg shadow-md p-4">
           <h3 class="text-lg font-semibold text-green-700 mb-4 border-b pb-2">
-            Latest Released TPSC Results
+            Latest Released  Results
           </h3>
           <ul class="divide-y text-sm">
             <li class="py-3 hover:bg-gray-50 transition">
