--- a/index.html
+++ b/index.html
@@ -292,6 +292,10 @@
           <ul class="divide-y text-sm">
             <!-- NEWEST FIRST -->
 
+            <!--January 2026-->
+
+            <!--January 2026-->
+
             <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
               <a
                 href="TripuraJobs/TPSC-Assistant-Controller-of-Examinations-Deputation-2025.html"
@@ -549,6 +553,36 @@
             📢 Latest Notices & Announcements
           </h3>
           <ul class="divide-y text-sm">
+            <!-- January 2026-->
+            <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
+              <a
+                href="https://prisons.tripura.gov.in/sites/default/files/2026-01/Notification.pdf"
+                target="_blank"
+                class="flex justify-between items-start gap-3 text-blue-700 hover:text-red-700"
+              >
+                <div class="flex flex-col">
+                  <div class="flex items-center gap-2">
+                    <span class="font-medium">
+                      Prison Warder (Male) PFT Result 2026 – Document
+                      Verification Notice
+                    </span>
+                    <span
+                      class="bg-red-100 text-red-700 text-[10px] font-semibold px-2 py-0.5 rounded-md"
+                    >
+                      NEW
+                    </span>
+                  </div>
+                  <span class="text-xs text-gray-500 mt-1">
+                    Home (Jail) Department, Government of Tripura
+                  </span>
+                </div>
+
+                <span class="text-xs text-gray-400 whitespace-nowrap">
+                  15 Jan 2026
+                </span>
+              </a>
+            </li>
+
             <li class="py-3 hover:bg-gray-50 transition">
               <a
                 href="https://tpsc.tripura.gov.in/sites/default/files/Notif_DIET_151225.pdf"
