--- a/index.html
+++ b/index.html
@@ -293,6 +293,34 @@
             <!-- NEWEST FIRST -->
 
             <!--January 2026-->
+            <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
+              <a
+                href="TripuraJobs/cau-recruitment-2026.html"
+                target="_blank"
+                class="flex justify-between items-start gap-3 text-blue-700 hover:text-red-700"
+              >
+                <div class="flex flex-col">
+                  <div class="flex items-center gap-2">
+                    <span class="font-medium">
+                      Central Agricultural University Recruitment 2026 –
+                      Advertisement No. 01/2026 (Group A, B & C Posts)
+                    </span>
+                    <span
+                      class="bg-red-100 text-red-700 text-[10px] font-semibold px-2 py-0.5 rounded-md"
+                    >
+                      NEW
+                    </span>
+                  </div>
+                  <span class="text-xs text-gray-500 mt-1">
+                    Central Agricultural University (CAU), Imphal
+                  </span>
+                </div>
+
+                <span class="text-xs text-gray-400 whitespace-nowrap">
+                  07 Jan 2026
+                </span>
+              </a>
+            </li>
 
             <!--January 2026-->
 
