--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -457,6 +457,20 @@
           <ul class="divide-y text-sm">
             <!-- NEWEST FIRST -->
             <!--January 2026-->
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="CentralJobs/rbi-office-attendant-recruitment-2026.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline"
+              >
+                <span>
+                  RBI Office Attendant Recruitment 2026 – 572 Posts (10th Pass
+                  Eligible)
+                </span>
+                <span class="text-xs text-gray-500">15 Jan 2026</span>
+              </a>
+            </li>
+
             <li class="py-3 hover:bg-gray-50 transition">
               <a
                 href="CentralJobs/indian-navy-10-2-btech-cadet-entry-2026.html"
