--- a/TripuraJobs/cau-recruitment-2026.html
+++ b/TripuraJobs/cau-recruitment-2026.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -70,6 +70,25 @@
         "url": "https://yourwebsite.com/CentralJobs/CAU-Recruitment-Advertisement-01-2026.html"
       }
     </script>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="title"
+      content="CAU Recruitment 2026 – Group A, B & C Posts | Central Agricultural University Jobs"
+    />
+    <meta
+      name="description"
+      content="Central Agricultural University Recruitment 2026 notification released for Group A, B & C posts. Check vacancy, eligibility, salary, exam pattern, important dates and apply online for CAU Jobs 2026."
+    />
+    <meta
+      name="keywords"
+      content="CAU Recruitment 2026, Central Agricultural University Jobs, CAU Group A B C Vacancy, CAU Imphal Recruitment, CAU Notification 2026, Central University Jobs, Government Jobs 2026, Tripura Sarkari Jobs"
+    />
+    <meta name="author" content="TripuraSarkari.com" />
+    <meta name="robots" content="index, follow" />
+    <link
+      rel="canonical"
+      href="https://yourwebsite.com/CentralJobs/CAU-Recruitment-Advertisement-01-2026.html"
+    />
   </head>
 
   <body class="bg-gray-100 text-gray-800 font-sans">
