--- a/pages/tripura-jobs.html
+++ b/pages/tripura-jobs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -97,7 +97,21 @@
 
             <li class="py-3 hover:bg-gray-50 transition">
               <a
-                href="../CentralJobs/CAU-Recruitment-Advertisement-01-2026.html"
+                href="../TripuraJobs/Tripura-Legislative-Assembly-Group-C-D-Recruitment-2026.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline"
+              >
+                <span>
+                  Tripura Legislative Assembly Secretariat Recruitment 2026 –
+                  Group C & Group D Posts
+                </span>
+                <span class="text-xs text-gray-500">24 Dec 2025</span>
+              </a>
+            </li>
+
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
+                href="../TripuraJobs/cau-recruitment-2026.html"
                 target="_blank"
                 class="flex justify-between items-center text-blue-600 hover:underline"
               >
