--- a/index.html
+++ b/index.html
@@ -337,6 +337,35 @@
               </a>
             </li>
 
+            <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
+              <a
+                href="TripuraJobs/tripura-legislative-assembly-group-c-d-recruitment-2026.html"
+                target="_blank"
+                class="flex justify-between items-start gap-3 text-blue-700 hover:text-red-700"
+              >
+                <div class="flex flex-col">
+                  <div class="flex items-center gap-2">
+                    <span class="font-medium">
+                      Tripura Legislative Assembly Secretariat Recruitment 2026
+                      – Group C & Group D Posts
+                    </span>
+                    <span
+                      class="bg-red-100 text-red-700 text-[10px] font-semibold px-2 py-0.5 rounded-md"
+                    >
+                      NEW
+                    </span>
+                  </div>
+                  <span class="text-xs text-gray-500 mt-1">
+                    Tripura Legislative Assembly Secretariat, Agartala
+                  </span>
+                </div>
+
+                <span class="text-xs text-gray-400 whitespace-nowrap">
+                  24 Dec 2025
+                </span>
+              </a>
+            </li>
+
             <!--January 2026-->
 
             <li class="py-3 px-2 rounded-lg hover:bg-red-50 transition">
