--- a/pages/central-jobs.html
+++ b/pages/central-jobs.html
@@ -92,7 +92,7 @@
 
             <li class="py-3 hover:bg-gray-50 transition">
               <a
-                href="CentralJobs/rbi-office-attendant-recruitment-2026.html"
+                href="../CentralJobs/rbi-office-attendant-recruitment-2026.html"
                 target="_blank"
                 class="flex justify-between items-center text-blue-600 hover:underline"
               >
