--- a/TripuraJobs/Tripura-Legislative-Assembly-Group-C-D-Recruitment-2026.html
+++ b/TripuraJobs/Tripura-Legislative-Assembly-Group-C-D-Recruitment-2026.html
@@ -40,7 +40,7 @@
         "hiringOrganization": {
           "@type": "Organization",
           "name": "Tripura Legislative Assembly Secretariat",
-          "sameAs": "https://tripuraassembly.nic.in"
+          "sameAs": "https://tripuraassembly.tripura.gov.in/"
         },
         "jobLocation": {
           "@type": "Place",
