--- a/pages/central-jobs.html
+++ b/pages/central-jobs.html
@@ -92,6 +92,20 @@
 
             <li class="py-3 hover:bg-gray-50 transition">
               <a
+                href="../CentralJobs/rrb-isolated-categories-recruitment-2026-cen-08-2025.html"
+                target="_blank"
+                class="flex justify-between items-center text-blue-600 hover:underline"
+              >
+                <span>
+                  RRB Isolated Categories Recruitment 2026 (CEN 08/2025) –
+                  Teacher, Librarian & Other Posts
+                </span>
+                <span class="text-xs text-gray-500">29 Dec 2025</span>
+              </a>
+            </li>
+
+            <li class="py-3 hover:bg-gray-50 transition">
+              <a
                 href="../CentralJobs/rbi-office-attendant-recruitment-2026.html"
                 target="_blank"
                 class="flex justify-between items-center text-blue-600 hover:underline"
@@ -106,7 +120,7 @@
 
             <li class="py-3 hover:bg-gray-50 transition">
               <a
-                href="../CentralJobs/rbi-office-attendant-recruitment-2026.html"
+                href="../CentralJobs/indian-navy-10-2-btech-cadet-entry-2026.html"
                 target="_blank"
                 class="flex justify-between items-center text-blue-600 hover:underline"
               >
